# polyarb2

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
deploy/: prometheus.yml
pm_arb_bot/: __init__.py  cli.py  config.py  settings.py  types.py
pm_arb_bot/backtest/: fillsim.py  replay.py
pm_arb_bot/data/: discovery.py  persistence.py  rest.py  sample_books.ndjson  schemas.py  stream.py
pm_arb_bot/exec/: risk.py  router.py
pm_arb_bot/infra/: health.py  metrics.py
pm_arb_bot/strategy/: base.py  basket.py  parity.py  resolution.py
pm_arb_bot/utils/: backoff.py  logging.py  math.py  time.py
tests/: conftest.py  test_backtest.py  test_basket.py  test_parity.py  test_risk.py  test_router.py
