[project]
name = "pm-arb-bot"
version = "0.1.0"
description = "Polymarket arbitrage bot"
authors = [{ name = "Quant Bot" }]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19",
    "httpx[http2]>=0.25",
    "pydantic>=2.4",
    "pyyaml>=6.0",
    "structlog>=23.1",
    "tenacity>=8.2",
    "typer>=0.9",
    "prometheus-client>=0.17",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "freezegun>=1.2",
    "hypothesis>=6.82",
    "ruff>=0.1.7",
    "mypy>=1.7",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pm_arb_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pm_arb_bot"]
ignore_missing_imports = true
